@@ -1,8 +1,9 @@
-FROM openjdk:17
+FROM maven:3.9.1-eclipse-temurin-17-alpine AS builder
+COPY pom.xml ./pom.xml
+COPY src ./src
+RUN mvn -B clean package spring-boot:repackage -DskipTests
 
-ARG GITHUB_REPO
-LABEL org.opencontainers.image.source=https://github.com/${GITHUB_REPO}
-
-ADD target/moviegenieserver-1.0.0.jar /server.jar
-
-ENTRYPOINT ["java", "--enable-preview", "-jar", "server.jar"]
+FROM amazoncorretto:17-alpine-jdk
+WORKDIR "/app"
+COPY --from=builder /target/*.jar /app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
